# python-masterthermconnect

./: .devcontainer-template.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  DEV_README.md  LICENSE  README.md  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  README.md  devcontainer.json  devcontainer.linux.podman.json  devcontainer.windows.docker.json
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: lint.yaml  pull.yml  push-dev.yml  push-main.yml  push-prerelease.yml  push-release.yml  push_dev.yml  push_pull.yml  python-app.yml
masterthermconnect/: __init__.py  __main__.py  __version__.py  api.py  connection.py  connecton.py  const.py  controller.py  controller_new.py  datamapread.py  datamapwrite.py  exceptions.py  modbus.py  modbusmap.py  special.py  test.json
tests/: __init__.py  conftest.py  test.json  test_api.py  test_api_new.py  test_api_old.py  test_config_data.py  test_connection.py  test_controller.py  test_init.py  test_main.py  test_mt.py
tests/fixtures/: login_invalid.json  login_success.json  pumpdata_1234_1_0.json  pumpdata_1234_1_1614501746.json  pumpdata_1234_1_1614763054.json  pumpdata_invalid.json  pumpdata_unavailable.json  pumpinfo_1234_1.json  pumpinfo_invalid.json  pumpwrite_error.json  pumpwrite_success.json
tests/fixtures/mt/: login_success.json  pumpdata_0001_1_0.json  pumpdata_0002_1_0.json  pumpdata_0524_1_0.json  pumpdata_0524_2_0.json  pumpdata_0524_3_0.json  pumpdata_0524_4_0.json  pumpinfo_0001_1.json  pumpinfo_0002_1.json  pumpinfo_0524_1.json  pumpinfo_0524_2.json  pumpinfo_0524_3.json  pumpinfo_0524_4.json
tests/fixtures/newapi/: error_unavailable.json  login_invalid.json  login_success.json  module_failure.json  modules.json  pumpdata_10021_1_0.json  pumpdata_10021_1_1668796652.json  pumpdata_10021_2_0.json  pumpinfo_10021_1.json  pumpinfo_10021_2.json  pumpwrite_success.json
