[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masterthermconnect"
version = "0.1.0"
description = "Python 3 API wrapper for MasterTherm API"
readme = "README.md"
authors = [{ name = "Richard Holmes", email = "richard@shedc.uk" }]
license = { file = "LICENSE" }
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords=["mastertherm heatpump", "api", "client"]
dependencies = [
    "aiohttp >= 3.8.1",
]
requires-python = ">=3.9.0"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/sHedC/python-masterthermconnect"

[project.scripts]
masterthermconnect = "masterthermconnect.__main__:main"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"masterthermconnect/__version__.py" = ["{version}"]
