[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "masterthermconnect"
version = "2.3.0"
description = "Python 3 API wrapper for Mastertherm API"
readme = "README.md"
authors = [{ name = "Richard Holmes", email = "richard@shedc.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Mastertherm heatpump", "api", "client"]
dependencies = [
    "aiohttp>=3.9.1",
    "natsort>=8.3.1"
]
requires-python = ">=3.9,<3.14"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/sHedC/python-masterthermconnect"

[project.scripts]
masterthermconnect = "masterthermconnect.__main__:main"

[tool.bumpver]
current_version = "2.3.0"
version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"masterthermconnect/__version__.py" = ["{pep440_version}"]
